--- a/pytest.ini
+++ b/pytest.ini
@@ -3,5 +3,5 @@
 markers =
     mat_ops: mark a test as utilizing matrix operations
 minversion = 4.0
-addopts = tests/01*
+addopts = tests/01_basic_test.py
 
