--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -3,4 +3,4 @@
 markers =
     mat_ops: mark a test as utilizing matrix operations
 minversion = 4.0
-addopts = 01_basic_test.py
+addopts = tests/01_basic_test.py
