--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,6 @@
 [flake8]
 exclude = 01_basic_test.py,.venv
+
+# content of pytest.ini
+[pytest]
+minversion = 8.0  # will fail if we run with pytest-2.8
