--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,7 @@ exclude = 01_basic_test.py,.venv
 # content of pytest.ini
 [pytest]
 minversion = 8.0  # will fail if we run with pytest-2.8
+
+[pylint.master]
+ignore-patterns=01_basic_test.py
+disable=W
