--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-exclude = 01_basic_test.py,.venv
+exclude = 01_basic_test.py,.venv, 19_re_usable_mock_test.py 
 
 # content of pytest.ini
 [pytest]
