--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 exclude = 01_basic_test.py,.venv, 19_re_usable_mock_test.py 
 
 # content of pytest.ini
-[pytest]
+[tool:pytest]
 minversion = 8.0  # will fail if we run with pytest-2.8
 
 [pylint.master]
