--- a/tox.ini
+++ b/tox.ini
@@ -5,3 +5,5 @@ addopts = -ra -q
 testpaths =
     tests2
     integration
+[flake8]
+ignore = F812,H101,H202,H233,H301,H306,H401,H403,H404,H405,H501
