--- a/tox2.ini
+++ b/tox2.ini
@@ -2,9 +2,9 @@
 [pytest]
 minversion = 6.0
 addopts = -ra -q
-testpaths =
-    tests2
-    integration
+#testpaths =
+#    tests2
+#   integration
 [flake8]
-ignore = F812,H101,H202,H233,H301,H306,H401,H403,H404,H405,H501
+#ignore = F812,H101,H202,H233,H301,H306,H401,H403,H404,H405,H501
 exclude=.venv
