--- a/tox2.ini
+++ b/tox2.ini
@@ -2,8 +2,8 @@
 [pytest]
 minversion = 6.0
 #addopts = -ra -q
-#testpaths =
-#    tests2
+testpaths =
+    tests
 #   integration
 [flake8]
 #ignore = F812,H101,H202,H233,H301,H306,H401,H403,H404,H405,H501
